Horizontal scrollbar fix
100vw of .Layout-loader is causing the horizontal scrollbar to appear - 100% solves the issue. :)

--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -13,7 +13,7 @@
     height: 20vh;
     flex: 1;
     position: absolute;
-    width: 100vw;
+    width: 100%;
   }
 
   &-main {
